# scm-cognitive-sandwich

./: .env.example  AGENTS.md  README.md  pyproject.toml
docs/: README.md
docs/architecture/: README.md  index.md
docs/decisions/: 001-llm-models-selection.md  002-otel-phoenix-project-attribution.md  README.md
docs/domain/: README.md  sandwich-loop.md
docs/exec-plans/: README.md
docs/exec-plans/active/: 01-project-initiation.md  README.md
scripts/: check_llm_health.py  run_baseline.py
src/agents/: graph.py  prompts.py  state.py
src/clients/: port_sandbox.py
src/core/: observability.py
src/memory/: __init__.py  checkpointer.py  yaam_client.py  yaam_facade.py
src/solver/: routing_model.py
tests/agents/: test_graph.py
tests/clients/: test_port_sandbox.py
tests/core/: test_observability.py
tests/memory/: test_checkpointer.py  test_yaam_client.py
tests/solver/: test_routing_model.py
