[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scm-cognitive-sandwich"
version = "0.1.0"
description = "SCM Cognitive Sandwich - LLM and OR Solver Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-core",
    "pyomo",
    "highspy",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
